# mnist_digit_classification

./: .gitignore  CMakeLists.txt  README.md  main.cpp  output.txt
notebooks/: MNIST_Digit_Classification.ipynb
src/: DataLoader.cpp  DataLoader.h  ModelLoader.cpp  ModelLoader.h  main.cpp
